--- a/user.html
+++ b/user.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Fake User Profile</title>
-<style>
-html, body {
-height: 100%;
-overflow: hidden;
-background-color: #eeeeee;
-color: #fff;
-font-family: Arial, sans-serif;
-display: flex;
-justify-content: center;
-align-items: center;
-margin: 0;
-padding: 0;
-}
-.layout-wrapper {
-display: flex;
-justify-content: center;
-align-items: center;
-width: 100%;
-max-width: 1600px;
-height: 100vh;
-}
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fake User Profile</title>
+  <style>
+    html, body {
+      height: 100%;
+      overflow: hidden;
+      background-color: #eeeeee;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      padding: 0;
+    }
+    .layout-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      max-width: 1600px;
+      height: 100vh;
+    }
     #live-stats {
       flex-shrink: 0;
       width: 180px;
@@ -42,98 +42,110 @@ height: 100vh;
       top: 20px;
       height: fit-content;
     }
-#app-frame {
-width: min(645px, 95vw);
-height: 100vh;
-background-color: #0f0f0f;
-border-radius: 20px;
-box-shadow: 0 0 15px rgba(0,0,0,0.3);
-overflow: hidden;
-display: flex;
-flex-direction: column;
-position: relative;
-}
-.content-wrapper {
-flex: 1;
-overflow-y: auto;
-padding-bottom: 60px;
-}
-header {
-text-align: center;
-padding: 1rem;
-border-bottom: 1px solid #333;
-background-color: #1a1a1a;
-font-weight: bold;
-font-size: 1.2rem;
-}
-.profile {
-padding: 1.5rem;
-display: flex;
-align-items: center;
-gap: 1.5rem;
-}
-.profile img {
-width: 80px;
-height: 80px;
-border-radius: 50%;
-background-color: #444;
-}
-.stats {
-display: flex;
-gap: 1rem;
-}
-.stat {
-text-align: center;
-}
-.stat strong {
-display: block;
-font-size: 1.1rem;
-color: #fff;
-}
-.bio {
-padding: 0 1.5rem 1rem;
-color: #aaa;
-}
-.stat-grid {
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-gap: 1px;
-background-color: #333;
-}
-.stat-grid div {
-background-color: #1c1c1c;
-aspect-ratio: 1 / 1;
-color: #ccc;
-font-size: 0.8rem;
-padding: 0.5rem;
-text-align: center;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-}
-.bottom-nav {
-position: absolute;
-bottom: 0;
-left: 0;
-right: 0;
-background-color: #1a1a1a;
-border-top: 1px solid #333;
-display: flex;
-justify-content: space-around;
-padding: 0.5rem 0;
-z-index: 10;
-border-bottom-left-radius: 20px;
-border-bottom-right-radius: 20px;
-}
-.bottom-nav a {
-color: #888;
-text-decoration: none;
-font-size: 1.3rem;
-}
-</style>
+    #app-frame {
+      width: min(645px, 95vw);
+      height: 100vh;
+      background-color: #0f0f0f;
+      border-radius: 20px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+    }
+    .content-wrapper {
+      flex: 1;
+      overflow-y: auto;
+      padding-bottom: 60px;
+    }
+    .content-wrapper::-webkit-scrollbar {
+      width: 8px;
+    }
+    .content-wrapper::-webkit-scrollbar-track {
+      background: transparent;
+    }
+    .content-wrapper::-webkit-scrollbar-thumb {
+      background-color: rgba(100, 100, 100, 0.3);
+      border-radius: 4px;
+    }
+    header {
+      text-align: center;
+      padding: 1rem;
+      border-bottom: 1px solid #333;
+      background-color: #1a1a1a;
+      font-weight: bold;
+      font-size: 1.2rem;
+    }
+    .profile {
+      padding: 1.5rem;
+      display: flex;
+      align-items: center;
+      gap: 1.5rem;
+    }
+    .profile img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background-color: #444;
+    }
+    .stats {
+      display: flex;
+      gap: 1rem;
+    }
+    .stat {
+      text-align: center;
+    }
+    .stat strong {
+      display: block;
+      font-size: 1.1rem;
+      color: #fff;
+    }
+    .bio {
+      padding: 0 1.5rem 1rem;
+      color: #aaa;
+    }
+    .stat-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 1px;
+      background-color: #333;
+    }
+    .stat-grid div {
+      background-color: #1c1c1c;
+      aspect-ratio: 1 / 1;
+      color: #ccc;
+      font-size: 0.8rem;
+      padding: 0.5rem;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+    .bottom-nav {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: #1a1a1a;
+      border-top: 1px solid #333;
+      display: flex;
+      justify-content: space-around;
+      padding: 0.5rem 0;
+      z-index: 10;
+      border-bottom-left-radius: 20px;
+      border-bottom-right-radius: 20px;
+    }
+    .bottom-nav a {
+      color: #888;
+      text-decoration: none;
+      font-size: 1.3rem;
+    }
+  </style>
 </head>
 <body>
+<!-- (script block and HTML unchanged) -->
+
 <div class="layout-wrapper">
     <div id="live-stats">
       <div>Reels Viewed: <span id="stat-reels">0</span></div>
