--- a/profile.html
+++ b/profile.html
@@ -196,13 +196,17 @@
               posts
             </div>
             <div class="stat">
-              <strong>0</strong>
-              followers
-            </div>
-            <div class="stat">
-              <strong>0</strong>
-              following
-            </div>
+  <strong>0</strong>
+  followers
+  <div style="font-size: 0.7rem; color: #888;">all bots probably</div>
+</div>
+
+<div class="stat">
+  <strong>0</strong>
+  following
+  <div style="font-size: 0.7rem; color: #888;">mostly meme pages</div>
+</div>
+
           </div>
         </div>
 
