--- a/search.html
+++ b/search.html
@@ -193,17 +193,18 @@
 
       <script>
         const fakeAccounts = [
-          { name: "scrollqueen", desc: "Still scrolling... queen style." },
-          { name: "doomqueen", desc: "Likes the darkness." },
-          { name: "taplord", desc: "Taps everything. All the time." },
-          { name: "tapbot", desc: "Probably not human." },
-          { name: "glitchlord", desc: "Exists between frames." },
-          { name: "noiserider", desc: "Tunes into static only." },
-          { name: "pixelpirate", desc: "Stealing screen space." },
-          { name: "feedghost", desc: "Lurks and vanishes." },
-          { name: "drainwave", desc: "Drained and proud." }
-          { name: "loopergeist", desc: "Circling the void like it’s a job." }
-        ];
+  { name: "scrollqueen", desc: "Still scrolling... queen style." },
+  { name: "doomqueen", desc: "Likes the darkness." },
+  { name: "taplord", desc: "Taps everything. All the time." },
+  { name: "tapbot", desc: "Probably not human." },
+  { name: "glitchlord", desc: "Exists between frames." },
+  { name: "noiserider", desc: "Tunes into static only." },
+  { name: "pixelpirate", desc: "Stealing screen space." },
+  { name: "feedghost", desc: "Lurks and vanishes." },
+  { name: "drainwave", desc: "Drained and proud." },
+  { name: "loopergeist", desc: "Circling the void like it’s a job." }
+];
+
 
         let showAllAccounts = false;
 
